--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,8 @@ label.img-ul-upload.img-ul-button {
 .active{
   color: #8d9c00 !important;
 }
+
+.error {
+	border: 1px solid #000 !important;
+}
+
